# MicroscopeSimulator2

./: .gitmodules  CMakeLists.txt  CTestConfig.cmake  ChangeLog.txt  FindVTKMS.cmake  README.txt  SuperBuild.cmake
apps/GLCheck/: CMakeLists.txt  Common.cxx  Common.h  GLCheck.cxx  GLCheck.h  Test16BitFloatingPointBlend.cxx  Test16BitFloatingPointBlend.h  Test32BitFloatingPointBlend.cxx  Test32BitFloatingPointBlend.h  TestFloatingPointTextureTrilinearInterpolation.cxx  TestFloatingPointTextureTrilinearInterpolation.h  TestGLSLUnsignedInts.cxx  TestGLSLUnsignedInts.h  TestRequiredExtensions.cxx  TestRequiredExtensions.h
apps/MicroscopeSimulator/: CMakeLists.txt  ChangeLog.txt  ErrorLogDialog.cxx  ErrorLogDialog.h  ErrorLogDialog.ui  FluorophoreModelDialog.cxx  FluorophoreModelDialog.h  FluorophoreModelDialog.ui  FocalPlanePositionsDialog.cxx  FocalPlanePositionsDialog.h  FocalPlanePositionsDialog.ui  ImageExportOptionsDialog.cxx  ImageExportOptionsDialog.h  ImageExportOptionsDialog.ui  Main.cxx  MicroscopeSimulator.cxx  MicroscopeSimulator.h  MicroscopeSimulator.ui  OptimizerSettingsDialog.cxx  OptimizerSettingsDialog.h  OptimizerSettingsDialog.ui  PSFEditor.ui  PSFEditorDialog.cxx  PSFEditorDialog.h  PSFEditorDialog.ui  Preferences.cxx  Preferences.h  PreferencesDialog.cxx  PreferencesDialog.h  PreferencesDialog.ui  QCopyPasteTableView.cxx  QCopyPasteTableView.h  QFluorescenceOptimizerSettingsTableModel.cxx  QFluorescenceOptimizerSettingsTableModel.h  QFocalPlanePositionsTableModel.cxx  QFocalPlanePositionsTableModel.h  QImageListModel.cxx  QImageListModel.h  QModelObjectListModel.cxx  QModelObjectListModel.h  (+10 more)
apps/MicroscopeSimulator/installer/: CMakeLists.txt  ChangeLog.txt
lib/: Version.h.in  (+1 more)
lib/Model/: CMakeLists.txt  DirtyListener.h  ImageIO.cxx  ImageIO.h  Simulation.cxx  Simulation.h  StdLibGuard.h  XMLHelper.cxx  XMLHelper.h  XMLStorable.h
lib/Model/AFMSim/: AFMSimulation.cxx  AFMSimulation.h
lib/Model/FluoroSim/: FluorescenceImageSource.h  FluorescenceImageSourceInterface.h  FluorescenceOptimizer.cxx  FluorescenceOptimizer.h  FluorescenceSimulation-old.cxx  FluorescenceSimulation-old.h  FluorescenceSimulation.cxx  FluorescenceSimulation.h  GaussianPointSpreadFunction.cxx  GaussianPointSpreadFunction.h  GibsonLanniWidefieldPointSpreadFunction.cxx  GibsonLanniWidefieldPointSpreadFunction.h  GradientDescentFluorescenceOptimizer.cxx  GradientDescentFluorescenceOptimizer.h  HaeberleWidefieldPointSpreadFunction.cxx  HaeberleWidefieldPointSpreadFunction.h  ITKFluorescenceOptimizer.cxx  ITKFluorescenceOptimizer.h  ImportedPointSpreadFunction.cxx  ImportedPointSpreadFunction.h  ModifiedGibsonLanniWidefieldPointSpreadFunction.cxx  ModifiedGibsonLanniWidefieldPointSpreadFunction.h  NelderMeadFluorescenceOptimizer.cxx  NelderMeadFluorescenceOptimizer.h  PointSpreadFunction.cxx  PointSpreadFunction.h  PointSpreadFunctionList.cxx  PointSpreadFunctionList.h  PointsGradientFluorescenceOptimizer.cxx  PointsGradientFluorescenceOptimizer.h  WidefieldPointSpreadFunction.cxx  WidefieldPointSpreadFunction.h
lib/Model/ModelObjects/: CylinderModelObject.cxx  CylinderModelObject.h  DiskModelObject.cxx  DiskModelObject.h  EllipsoidModelObject.cxx  EllipsoidModelObject.h  FlexibleTubeModelObject.cxx  FlexibleTubeModelObject.h  FluorophoreModelChannels.h  FluorophoreModelObjectProperty.cxx  FluorophoreModelObjectProperty.h  FluorophoreModelTypes.h  GeometryVerticesFluorophoreProperty.cxx  GeometryVerticesFluorophoreProperty.h  GridBasedFluorophoreProperty.cxx  GridBasedFluorophoreProperty.h  HollowCylinderModelObject.cxx  HollowCylinderModelObject.h  ImageModelObject.cxx  ImageModelObject.h  ImportedGeometryModelObject.cxx  ImportedGeometryModelObject.h  ModelObject.cxx  ModelObject.h  ModelObjectFactory.cxx  ModelObjectFactory.h  ModelObjectList.cxx  ModelObjectList.h  ModelObjectProperty.cxx  ModelObjectProperty.h  ModelObjectPropertyList.cxx  ModelObjectPropertyList.h  PlaneModelObject.cxx  PlaneModelObject.h  PointRingModelObject.cxx  PointRingModelObject.h  PointSetModelObject.cxx  PointSetModelObject.h  SphereModelObject.cxx  SphereModelObject.h  (+8 more)
lib/VTK/Common/: CMakeLists.txt  vtkImplicitPolyData.cxx  vtkImplicitPolyData.h
lib/VTK/Filtering/: CMakeLists.txt  tetgen.cxx  tetgen.h  tri_tri_overlap.h  vtkImageConvolvePoints.cxx  vtkImageConvolvePoints.h  vtkPointRingSource.cxx  vtkPointRingSource.h  vtkPolyDataDistance.cxx  vtkPolyDataDistance.h  vtkPolyDataIntersection.cxx  vtkPolyDataIntersection.h  vtkPolyDataTexturizer.cxx  vtkPolyDataTexturizer.h  vtkPolyDataToTetrahedralGrid.cxx  vtkPolyDataToTetrahedralGrid.h  vtkPolyDataUtilities.cxx  vtkPolyDataUtilities.h  vtkPrincipalCurvatures.cxx  vtkPrincipalCurvatures.h  vtkRefactorPolyData.cxx  vtkRefactorPolyData.h  vtkSurfaceUniformPointSampler.cxx  vtkSurfaceUniformPointSampler.h  vtkUniformPointSampler.cxx  vtkUniformPointSampler.h  vtkVolumeUniformPointSampler.cxx  vtkVolumeUniformPointSampler.h
lib/VTK/Graphics/: CMakeLists.txt  vtkDiskSource2.cxx  vtkDiskSource2.h  vtkRectangleSource.cxx  vtkRectangleSource.h  vtkVolumetricCylinderSource.cxx  vtkVolumetricCylinderSource.h  vtkVolumetricEllipsoidSource.cxx  vtkVolumetricEllipsoidSource.h  vtkVolumetricHollowCylinderSource.cxx  vtkVolumetricHollowCylinderSource.h  vtkVolumetricTorusSource.cxx  vtkVolumetricTorusSource.h
lib/VTK/Rendering/: CMakeLists.txt  ChangeLog.txt  cudaComplex.h  vtkAFMTipDilationMapper.cxx  vtkAFMTipDilationMapper.h  vtkBinningFluorescencePolyDataMapper.cxx  vtkBinningFluorescencePolyDataMapper.h  vtkBinningFluorescenceRenderer.cxx  vtkBinningFluorescenceRenderer.h  (+26 more)
lib/Visualization/: CMakeLists.txt  ChangeLog.txt  ImagePlaneVisualizationPipeline.cxx  ImagePlaneVisualizationPipeline.h  IsosurfaceVisualizationPipeline.cxx  IsosurfaceVisualizationPipeline.h  OutlineVisualizationPipeline.cxx  OutlineVisualizationPipeline.h  Visualization.cxx  Visualization.h  VisualizationFluorescenceImageSource.cxx  VisualizationFluorescenceImageSource.h  VisualizationPipeline.cxx  VisualizationPipeline.h  vtkModelObjectRepresentation.cxx  vtkModelObjectRepresentation.h
(+122 files in other folders)
